fixed modal bug not showing

--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -51,3 +51,8 @@
 select {
 	margin: 5px 0px 5px 0px;
 }
+
+.show {
+  display: block;
+}
+
